--- a/index.html
+++ b/index.html
@@ -1,5 +1,33 @@
-<h1>Check it out</h1>
-<a href='hello.html'>hello.html</a><br />
-<a href='hello.php'>hello.php</a><br />
-<a href='hello_db.php'>hello_db.php</a><br />
 
+<style>
+    
+.Wrapper{
+  display:flex;
+}
+.Div1{
+  background-color:red;
+  width:300px;
+}
+.Div2{
+  background-color:blue;
+  width:300px;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .Wrapper{
+    display:block;
+  }
+  .Div1{
+    width:100%;
+  }
+  .Div2{
+    width:100%;
+  }
+}
+    </style>
+    
+    <div class='Wrapper'>
+      <div class='Div1'>Hello</div>
+      <div class='Div2'>Goodbye</div>
+    </div>
